--- a/OpenOrderFramework/Views/Home/Index.cshtml
+++ b/OpenOrderFramework/Views/Home/Index.cshtml
@@ -1,11 +1,8 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
+﻿@{ ViewBag.Title = "Saoirse Design"; }
 
 <div class="jumbotron">
-    <h1>Open Framework Test</h1>
-    <p class="lead">This is simply a test for the open order framework built by Louie and Anton Bacaj.</p>
-    <p><button type="button" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("Index", "Items")'">Order Some Food &raquo;</button></p>
+    <h1>Saoirse Design</h1>
+    <p class="lead">SPLASH TEST PAGE.</p>
 </div>
 
 <div class="row">
