--- a/OpenOrderFramework/Views/Shared/_Layout.cshtml
+++ b/OpenOrderFramework/Views/Shared/_Layout.cshtml
@@ -3,10 +3,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Order Framework</title>
+
+    <meta name="description" content="Saoirse Design specializes in a multitude of hand crafted customizable items. Including: Bull whips, Paracord wearables as well as paracord leashes and collars." />
+    <meta name="keywords" content="Saoirse, Saoirse Design, " />
+
+    <title>@ViewBag.Title - Saoirse Design</title>
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link rel="stylesheet" href="/Content/card.css">
+
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
