--- a/OpenOrderFramework/Content/bootstrap.css
+++ b/OpenOrderFramework/Content/bootstrap.css
@@ -3822,9 +3822,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     padding-top: 12px;
     padding-bottom: 12px;
   }
-  .navbar-nav.navbar-right:last-child {
+  /*.navbar-nav.navbar-right:last-child {
     margin-right: -15px;
-  }
+  }*/
 }
 @media (min-width: 768px) {
   .navbar-left {
@@ -4326,15 +4326,16 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .badge {
   display: inline-block;
   min-width: 10px;
-  padding: 3px 7px;
+  padding: 3px 5px;
+  font-family: 'Montserrat', sans-serif;
   font-size: 12px;
   font-weight: bold;
-  color: #777777;
+  color: white;
   line-height: 1;
   vertical-align: baseline;
   white-space: nowrap;
   text-align: center;
-  background-color: #e7e7e7;
+  background-color: #ED5672;
   border-radius: 10px;
 }
 .badge:empty {
