--- a/OpenOrderFramework/Views/Shared/_LoginPartial.cshtml
+++ b/OpenOrderFramework/Views/Shared/_LoginPartial.cshtml
@@ -3,19 +3,33 @@
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" })) {
         @Html.AntiForgeryToken()
 
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right" style="border-left:1px solid; padding-left:5px;">
+            @if (User.IsInRole("Admin")) {
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin Area <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li>@Html.ActionLink("Orders", "Index", "Orders")</li>
+                        <li>@Html.ActionLink("Catagorie", "Index", "Catagories")</li>
+                        <li>@Html.ActionLink("Analytics", "Index", "Analytics")</li>
+                        <li class="divider"></li>
+                        <li class="dropdown-header">Roles Admin</li>
+                        <li>@Html.ActionLink("RolesAdmin", "Index", "RolesAdmin")</li>
+                        <li>@Html.ActionLink("UsersAdmin", "Index", "UsersAdmin")</li>
+                    </ul>
+                </li>
+            }
+
             <li class="active">@{Html.RenderAction("CartSummary", "ShoppingCart");}</li>
             <li>
-                @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+                @Html.ActionLink("", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class = "faico fa-user" })
             </li>
             <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
-        </ul>
+        </ul>        
     }
 }
 else {
-    <ul class="nav navbar-nav navbar-right">
+    <ul class="nav navbar-nav navbar-right" style="border-left:1px solid; padding-left:5px;">
         <li class="active">@{Html.RenderAction("CartSummary", "ShoppingCart");}</li>
-        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        <li><a href='@Url.Action("Login", "Account", routeValues: null)'><i class="faico fa-user"></i>Log in</a></li>
     </ul>
 }
