--- a/OpenOrderFramework/Views/ShoppingCart/CartSummary.cshtml
+++ b/OpenOrderFramework/Views/ShoppingCart/CartSummary.cshtml
@@ -1,1 +1,1 @@
-﻿<a href='@Url.Action("Index", "ShoppingCart")'><strong>Cart</strong>  <span id="cart-status" class="badge">@ViewData["CartCount"]</span></a>
+﻿<a href='@Url.Action("Index", "ShoppingCart")' ><i class="faico fa-shopping-cart"></i><span id="cart-status" class="badge">@ViewData["CartCount"]</span></a>
