Add temp font for logo. Update main page info to temp msg.

--- a/OpenOrderFramework/Content/Site.css
+++ b/OpenOrderFramework/Content/Site.css
@@ -45,7 +45,8 @@
 }
 
 a.sd-logo {
-    font-size: 22px;
+    font-family: SerendityScript,'Open Sans';
+    font-size: 40px;
     color: #160E32;
 }
 
