--- a/OpenOrderFramework/Views/Home/Index.cshtml
+++ b/OpenOrderFramework/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{ ViewBag.Title = "Saoirse Design"; }
 
 <div class="jumbotron">
-    <h1>Saoirse Design</h1>
-    <p class="lead">SPLASH TEST PAGE.</p>
+    <h1>Under Construction</h1>
+    <p class="lead">Hi! Thank you for visting the site. Unfortunately we are currently still under construction here so that you can shop <span style="font-style:italic; color:#ED5672;">in style.</span> Please feel free to drop us a line at: <strong>SaoirseDesign@gmail.com</strong> for any order requests!</p>
 </div>
 
 <div class="row">
