--- a/OpenOrderFramework/Views/Home/Index.cshtml
+++ b/OpenOrderFramework/Views/Home/Index.cshtml
@@ -2,35 +2,7 @@
 
 <div class="jumbotron">
     <h1>Under Construction</h1>
-    <p class="lead">Hi! Thank you for visting the site. Unfortunately we are currently still under construction here so that you can shop <span style="font-style:italic; color:#ED5672;">in style.</span> Please feel free to drop us a line at: <strong>SaoirseDesign@gmail.com</strong> for any order requests!</p>
-</div>
-
-<div class="row">
-    <div class="col-md-4">
-       
-    </div>
-    <div class="col-md-4">
-        
-    </div>
-    <div class="col-md-4">
-        
-    </div>
-    <div class="col-md-4">
-
-    </div>
-    <div class="col-md-4">
-        
-    </div>
-    <div class="col-md-4">
-        
-    </div>
-    <div class="col-md-4">
-       
-    </div>
-    <div class="col-md-4">
-        
-    </div>
-
-
-
+    <p class="lead">Hi! Thank you for visting the site. Unfortunately we are currently still under construction here so that you can shop <span style="font-style:italic; color:#ED5672;">in style.</span></p>
+    <br /> 
+    <p class="lead">Please feel free to drop us a line at: <strong>Daneiru@gmail.com</strong> for any order requests!</p>
 </div>
