--- a/OpenOrderFramework/Views/Shared/_Layout.cshtml
+++ b/OpenOrderFramework/Views/Shared/_Layout.cshtml
@@ -4,76 +4,50 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Saoirse Design specializes in a multitude of hand crafted customizable items. Including: Bull whips, Paracord wearables as well as paracord leashes and collars." />
-    <meta name="keywords" content="Saoirse, Saoirse Design, " />
+    <meta name="description" content="Saoirse Design specializes in a multitude of hand crafted customizable items. Including: Custom LEDs work, bull whips, paracord wearables as well as paracord leashes and collars." />
+    <meta name="keywords" content="Saoirse, Saoirse Design, Whips, Custom LEDs, Sayorse, Seoirse, Seersha, Serrsha" />
 
     <title>@ViewBag.Title - Saoirse Design</title>
 
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+
+    @Scripts.Render("~/bundles/jquery")    
+    @Scripts.Render("~/bundles/scripting")
+
     <link rel="stylesheet" href="/Content/card.css">
 
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
+    <header class="splash-header">
+        <div class="splash-container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
 
-            <div class="bs-component">
-                <div class="navbar navbar-inverse navbar-fixed-top">
-                    <div class="navbar-header">
-                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
-                            @Html.ActionLink("OrderFrameWork", "Index", "Home", null, new { @class = "navbar-brand" })
-                        </div>
-                        <div class="navbar-collapse collapse">
-                            <ul class="nav navbar-nav">
-                                <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                                @if (Request.IsAuthenticated && User.IsInRole("Admin"))
-                                {
-                                    <li class="dropdown">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin Area <b class="caret"></b></a>
-                                        <ul class="dropdown-menu">
-                                            <li>@Html.ActionLink("Orders", "Index", "Orders")</li>
-                                            <li>@Html.ActionLink("Catagorie", "Index", "Catagories")</li>
-                                            <li>@Html.ActionLink("Analytics", "Index", "Analytics")</li>
-                                            <li class="divider"></li>
-                                            <li class="dropdown-header">Roles Admin</li>
-                                            <li>@Html.ActionLink("RolesAdmin", "Index", "RolesAdmin")</li>
-                                            <li>@Html.ActionLink("UsersAdmin", "Index", "UsersAdmin")</li>
-                                        </ul>
-                                    </li>
-                                }
-                                <li>@Html.ActionLink("Food", "Index", "Items")</li>
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">About us <b class="caret"></b></a>
-                                    <ul class="dropdown-menu">
-                                        <li>@Html.ActionLink("About", "About", "Home")</li>
-                                        <li class="divider"></li>
-                                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                                    </ul>
-                                </li>
-                            </ul>
-                            
-                            @Html.Partial("_LoginPartial")
-                           
-                        </div>
+                @Html.ActionLink("Saoirse Design", "Index", "Home", null, new { @class = "sd-logo" })
+            </div>
 
-                    </div>
-                </div>
-                <br />
-                <br />
-                <div class="container body-content">
-                    @RenderBody()
-                    <hr />
-                    <footer>
-                        <p>&copy; @DateTime.Now.Year - Order Framework by Louie Bacaj</p>
-                    </footer>
-                </div>
+            <div class="navbar-collapse collapse">
+                @Html.Partial("_LoginPartial")
 
-                @Scripts.Render("~/bundles/jquery")
-                @Scripts.Render("~/bundles/bootstrap")
-                @RenderSection("scripts", required: false)
+                <ul class="nav navbar-nav navbar-right" style="padding-right:5px;">
+
+                    <li>@Html.ActionLink("Shop", "Index", "Items")</li>
+                </ul>
+            </div>
+        </div>
+    </header>
+
+    <div class="container body-content">
+        @RenderBody()
+    </div>
+
+    @Scripts.Render("~/bundles/bootstrap")
+    @RenderSection("scripts", required: false)
 </body>
 </html>
