--- a/OpenOrderFramework/Views/Shared/_LoginPartial.cshtml
+++ b/OpenOrderFramework/Views/Shared/_LoginPartial.cshtml
@@ -3,7 +3,7 @@
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" })) {
         @Html.AntiForgeryToken()
 
-        <ul class="nav navbar-nav navbar-right" style="border-left:1px solid; padding-left:5px;">
+        <ul class="nav navbar-nav navbar-right" style="border-left:2px solid white; padding-left:5px;">
             @if (User.IsInRole("Admin")) {
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin Area <b class="caret"></b></a>
