--- a/OpenOrderFramework/Views/Shared/_SplashLayout.cshtml
+++ b/OpenOrderFramework/Views/Shared/_SplashLayout.cshtml
@@ -18,7 +18,7 @@
 <body>
     <header class="splash-header">
         <div class="splash-container">
-            <div class="navbar-header">
+            <div class="navbar-header" style="padding: 50px 0;">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -33,7 +33,7 @@
 
                 <ul class="nav navbar-nav navbar-right" style="padding-right:5px;">                   
 
-                    <li>@Html.ActionLink("Food", "Index", "Items")</li>
+                    <li>@Html.ActionLink("Shop", "Browse", "Items")</li>
                 </ul>
             </div>
         </div>
